data/derived/fa15/progs/unify/prog3200.ml.out
Characters 54-57:
  let fixpoint (f,b) = wwhile(if f b = true then b else f b, b);;
                                                        ^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
